# conan-package-manager

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp  manageAI.cpp  manageAI.h
config/: rectangle_config.json
include/: ai_interface.h
include/module/: rectangle_module.h
module/: rectangle_module.cpp
